add windows support for 'simple' example

--- a/examples/simple/Makefile
+++ b/examples/simple/Makefile
@@ -1,10 +1,16 @@
 CFLAGS=-I../../api
 LDFLAGS=-shared -fPIC
 
-simple.so: simple.c
+ifeq ($(shell uname -s | grep -o _NT),_NT)
+OUT=simple.dll
+else
+OUT=simple.so
+endif
+
+$(OUT): simple.c
 	$(CC) $(CFLAGS) $(LDFLAGS) -o $@ $<
 
 clean:
-	rm -f *.so
+	rm -f $(OUT)
 
 .PHONY: clean
