--- a/.github/workflows/zig.yml
+++ b/.github/workflows/zig.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install OpenGL and glfw (Linux)
         if: runner.os == 'Linux'
         run: |
-          sudo apt-get install libglew-dev libglfw3 libglfw3-dev
+          sudo apt-get install libglew-dev libglfw3 libglfw3-dev libpulse-dev
       - name: Install glfw (macOS)
         if: runner.os == 'macOS'
         run: brew install glfw
